# appledb_rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  appledb_server.service  build_web.sh  config.yaml  update_models.sh
.github/workflows/: docker-build.yml  rust-quality.yml  web-build.yml  web-quality.yml
cli/: Cargo.toml
cli/src/: ipsw_executables.rs  main.rs  server_controller.rs  utils.rs
cli/src/commands/: ent.rs  frameworks.rs  full.rs  mod.rs  os.rs  tasks.rs
cli/src/data_writers/: data_writer.rs  local_controller.rs  mod.rs  server_controller.rs
cli/src/models/: mod.rs  opts.rs
cli/src/parsers/: entitlements.rs  frameworks.rs  mod.rs  parser.rs
common/: Cargo.toml
common/src/: config.rs  executable.rs  ipsw_entitlements.rs  ipsw_frameworks.rs  lib.rs  operating_system_version.rs  platform.rs  routes.rs  server_stats.rs
common/src/api_models/: app_response.rs  entitlements.rs  mod.rs  operating_system.rs  server_error.rs  task_progress.rs
common/src/db_models/: device.rs  entitlement.rs  executable.rs  framework.rs  mod.rs  operating_system.rs  operating_system_version.rs
documentation/: configuration.md  development.md  installation.md  tips.md
entity/: Cargo.toml
entity/src/entities/: device.rs  entitlement.rs  executable.rs  executable_entitlement.rs  executable_framework.rs  executable_operating_system_version.rs  framework.rs  mod.rs  operating_system.rs  operating_system_version.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m1_operating_system.rs  m2_device.rs  m2_operating_system_version.rs  m3_executable.rs  m3_operating_system_version.rs  m4_entitlement.rs  m4_executable.rs  m5_entitlement.rs  m5_executable_entitlement.rs  m6_executable_entitlement.rs  m6_executable_operating_system_version.rs  m7_executable_entitlement.rs  m8_frameworks.rs  m9_executable_framework.rs
server/: Cargo.toml  apple_models.json
server/src/: data_watcher.rs  db_controller.rs  main.rs  utils.rs
server/src/crud/: devices.rs  entitlements.rs  executable_entitlement.rs  executable_framework.rs  executable_operating_system_version.rs  executables.rs  frameworks.rs  mod.rs  operating_system_versions.rs  operating_systems.rs
server/src/handlers/: mod.rs
server/src/handlers/admin/: entitlements.rs  executables.rs  frameworks.rs  mod.rs  operating_system_version.rs  router.rs  tasks.rs
server/src/handlers/public/: devices.rs  entitlements.rs  executables.rs  frameworks.rs  mod.rs  operating_system_versions.rs  operating_systems.rs  router.rs  stats.rs  tasks.rs
server/src/middlewares/: log_requests.rs  mod.rs
server/src/models/: app_state.rs  config.rs  mod.rs  opts.rs
web/: eslint.config.js  index.html  package.json  vite.config.js  vite.config.ts
web/public/: index.html
web/src/: App.css  App.js  App.jsx  App.tsx  Constants.jsx  Constants.tsx  PageInfos.tsx  env.d.ts  icons.tsx  index.css  main.jsx  main.tsx  themes.tsx  tooltip_text.tsx
web/src/Components/: Card.css  Card.js
web/src/Pages/: HomePage.css  HomePage.js  ModelPage.js  VersionPage.js
web/src/components/: Card.css  Card.jsx  Card.tsx  CustomAccordion.tsx  CustomAppBar.css  CustomAppBar.jsx  CustomAppBar.tsx  CustomAutocomplete.tsx  CustomDataTable.css  CustomDataTable.jsx  CustomDataTable.tsx  CustomDrawer.tsx  CustomSearch.tsx  CustomSelect.tsx  DeviceVersionSearch.tsx  DiffResults.tsx  InfoTooltip.tsx  Select.jsx  Select.tsx  StyledInput.css  StyledInput.jsx  StyledInput.tsx  Table.jsx  TitledComponent.tsx
web/src/routes/: DevicesList.tsx  Diffing.jsx  Diffing.tsx  EntitlementRoute.css  EntitlementsDiffing.tsx  EntitlementsRoute.jsx  EntitlementsRoute.tsx  EntitlementsSearch.tsx  ExecutableEntitlements.tsx  ExecutableFrameworks.tsx  Executables.tsx  ExecutablesDffing.tsx  ExecutablesFrameworks.tsx  Frameworks.tsx  FrameworksDiffing.tsx  FrameworksLinking.tsx  Home.tsx  HomePage.css  HomePage.jsx  HomeRoute.jsx  ModelPage.jsx  ModelPage.tsx  NotFound.css  NotFound.tsx  Stats.jsx  Stats.tsx  Tasks.tsx  VersionPage.jsx
web/src/routes/diffing/: EntitlementsDiffing.tsx  ExecutablesDffing.tsx  FrameworksDiffing.tsx
web/src/types/: device.tsx  device_versions.tsx  diff.tsx  entitlement.tsx  executable_operating_system.tsx  executables.tsx  framework.tsx  operating_system_version.tsx  server_stats.tsx  task_progress.tsx  versions.tsx
