[workspace]
members = ["cli", "common", "entity", "migration", "server"]
resolver = "2"

[workspace.package]
authors = ["Corentin LIAUD"]
description = "Apple artifacts database"
edition = "2024"
homepage = "https://github.com/cocool97/appledb_rs"
keywords = ["apple", "database", "entitlements", "ios"]
license = "MIT"
repository = "https://github.com/cocool97/appledb_rs"
version = "0.1.0"

[profile.release]
codegen-units = 1
debug-assertions = false
lto = "thin"
opt-level = 'z'
strip = true
