[workspace]
members = ["cli", "common", "entity", "migration", "server"]
resolver = "2"

[workspace.package]
authors = ["Corentin LIAUD"]
description = "Apple artifacts database"
edition = "2024"
homepage = "https://github.com/cocool97/appledb_rs"
keywords = ["apple", "database", "entitlements", "ios"]
license = "MIT"
repository = "https://github.com/cocool97/appledb_rs"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
apple-codesign = { version = "0.29.0", default-features = false }
appledb_common = { path = "common" }
async-std = "1"
axum = "0.8.6"
axum-macros = "0.5.0"
base64 = "0.22.1"
chrono = "0.4.42"
clap = "4.5.48"
entity = { path = "entity" }
env_logger = "0.11.8"
futures = "0.3.31"
indicatif = "0.18.0"
inotify = "0.11.0"
log = "0.4.28"
migration = { path = "migration" }
plist = "1.8.0"
reqwest = { version = "0.12.23", default-features = false }
sea-orm = "1.1.17"
sea-orm-migration = "1.1.17"
serde = {version = "1.0.228", default-features = false, features = ["derive"]}
serde_json = "1.0.145"
serde_norway = "0.9.42"
tokio = "1.47.1"
tower = "0.5.2"
tower-http = "0.6.6"
url = "2.5.7"
utoipa = "5.4.0"
utoipa-swagger-ui = "9.0.2"
uuid = "1.18.1"
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
debug-assertions = false
lto = "thin"
opt-level = 'z'
strip = true
