[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "appledb_cli"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.95"
apple-codesign = { version = "0.29.0", default-features = false }
appledb_common = { path = "../common" }
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.29", features = ["derive"] }
env_logger = "0.11.6"
indicatif = "0.18.0"
log = "0.4.25"
plist = { version = "1.7.0", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["gzip"] }
serde = "1.0.217"
serde_json = { version = "1.0.138", features = ["std"] }
tokio = { version = "1.43.0", features = ["full"] }
walkdir = { version = "2.5.0" }

#####################################
# Debian package build instructions #
#####################################
[package.metadata.deb]
assets = [
    { source = "target/release/appledb_cli", dest = "/usr/bin/", mode = "755" },
]
priority = "optional"
section = "utility"
