[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "appledb_cli"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
apple-codesign = { version = "0.29.0", default-features = false }
appledb_common = { path = "../common" }
base64 = "0.22.1"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
indicatif = "0.18.0"
log = "0.4.28"
plist = { version = "1.8.0", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["gzip"] }
serde = "1.0.228"
serde_json = { version = "1.0.145", features = ["std"] }
tokio = { version = "1.47.1", features = ["full"] }
walkdir = { version = "2.5.0" }

#####################################
# Debian package build instructions #
#####################################
[package.metadata.deb]
assets = [
    { source = "target/release/appledb_cli", dest = "/usr/bin/", mode = "755" },
]
priority = "optional"
section = "utility"
