[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "appledb_cli"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
apple-codesign = { workspace = true }
appledb_common = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
plist = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["gzip"] }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
walkdir = { workspace = true }

#####################################
# Debian package build instructions #
#####################################
[package.metadata.deb]
assets = [
    { source = "target/release/appledb_cli", dest = "/usr/bin/", mode = "755" },
]
priority = "optional"
section = "utility"
