[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "appledb_common"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.95"
entity = { path = "../entity" }
serde = "1.0.217"
serde_json = "1.0.138"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.43.0", features = ["fs"] }
url = "2.5.4"
utoipa = { git = "https://github.com/juhaku/utoipa.git",  rev = "cecda0531bf7d90800af66b186055932ee730526", features = ["axum_extras"] }
