[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "appledb_common"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
entity = { path = "../entity" }
serde = "1.0.228"
serde_json = "1.0.145"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["fs"] }
url = "2.5.7"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
