[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "appledb_common"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
entity = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
