[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "migration"
publish = false
repository.workspace = true
version.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
sea-orm = { version = "1.1.16" }
sea-orm-migration = { version = "1.1.16", features = [] }
