[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "migration"
publish = false
repository.workspace = true
version.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
entity = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true, features = [] }
