[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "appledb_server"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.95"
appledb_common = { path = "../common" }
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
clap = { version = "4.5.29", features = ["derive", "env"] }
entity = { path = "../entity" }
env_logger = "0.11.6"
log = "0.4.25"
migration = { path = "../migration" }
sea-orm = { version = "1.1.4", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
serde_norway = "0.9.42"
tokio = { version = "1.43.0", features = ["fs", "rt", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
url = "2.5.4"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
uuid = { version = "1.16.0", features = ["v4"] }
inotify = "0.11.0"
futures = "0.3.31"

#####################################
# Debian package build instructions #
#####################################
[package.metadata.deb]
depends = ''
assets = [
    { source = "target/release/appledb_server", dest = "/usr/bin/", mode = "755" },
    { source = "../web/dist/*", dest = "/usr/share/appledb_server/web", mode = "755" },
    { source = "../web/dist/assets/*", dest = "/usr/share/appledb_server/web/assets", mode = "755" },
]
priority = "optional"
section = "utility"
