[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "appledb_server"
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
appledb_common = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-macros = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
entity = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
migration = { workspace = true }
sea-orm = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "rt-multi-thread"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "fs"] }
url = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum", "vendored"] }
uuid = { workspace = true, features = ["v4"] }
inotify = { workspace = true }
futures = { workspace = true }
utoipa-axum = "0.2.0"

#####################################
# Debian package build instructions #
#####################################
[package.metadata.deb]
depends = ''
assets = [
    { source = "target/release/appledb_server", dest = "/usr/bin/", mode = "755" },
    { source = "../web/dist/*", dest = "/usr/share/appledb_server/web", mode = "755" },
    { source = "../web/dist/assets/*", dest = "/usr/share/appledb_server/web/assets", mode = "755" },
]
priority = "optional"
section = "utility"
